# QuadcopterMapping

./: .gitignore  README.md  README.md~  frames.gv  notes.txt  todo.txt
data/: 20130316170747.txt
quadcopterCode/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~  quadcopter.launch
quadcopterControl/: CMakeLists.txt  CMakeLists.txt~  gui  manifest.xml  manifest.xml~  readme.txt  readme.txt~  readmevid.txt~
quadcopterControl/ARDroneLib/FFMPEG/ffmpeg/: config.h  config.mak
quadcopterControl/ARDroneLib/FFMPEG/ffmpeg/libavcodec/: libavcodec-uninstalled.pc
quadcopterControl/ARDroneLib/FFMPEG/ffmpeg/libavdevice/: libavdevice-uninstalled.pc
quadcopterControl/ARDroneLib/FFMPEG/ffmpeg/libavfilter/: libavfilter-uninstalled.pc
quadcopterControl/ARDroneLib/FFMPEG/ffmpeg/libavformat/: libavformat-uninstalled.pc
quadcopterControl/ARDroneLib/FFMPEG/ffmpeg/libswscale/: libswscale-uninstalled.pc  libswscale.pc
quadcopterControl/ARDroneLib/Soft/Common/: generated_custom.h
quadcopterControl/control_scripts/: forward  land  reset  toggleCam  zero
quadcopterControl/launch/: flyQuadcopters.launch~
quadcopterControl/src/: Controller.cpp  Controller.cpp~  Controller.h  Controller.h~  Drone.cpp  Drone.cpp~  Drone.h  Drone.h~  drone.cpp~  drone.cpp~ (Case Conflict 1)  drone.cpp~ (Case Conflict 2)  drone.cpp~ (Case Conflict 3)  drone.h~  functions.cpp  functions.cpp~  functions.h  functions.h~  main.cpp  main.cpp~  recordData.cpp  systemID.cpp  systemID.cpp~
quadcopterLocalization/: mainpage.dox  manifest.xml
quadcopterTeamSim/: CMakeLists.txt  CMakeLists.txt~  (+4 more)
(+70 files in other folders)
